--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">EyeWear 2016</h1>
-                        <p class="intro-text">First Workshop on Eye Wear Computing collocated with ISWC/UbiComp.<br>12/13 Sept. Heidelberg.<br>Paper Deadline 14 July</p>
+                        <p class="intro-text">First Workshop on Eye Wear Computing collocated with ISWC/UbiComp.<br>12/13 Sept. Heidelberg.<br>Paper Deadline June 6</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,9 +94,9 @@
                 <p>The proposed workshop will bring together researchers from a wide range of computing disciplines, such as mobile and ubiquitous computing, eye tracking, optics, computer vision, human vision and perception, privacy and security, usability, as well as systems research.
 </p>
                 <h2>Important Dates</h2>
-                <p>Workshop submission deadline: July 14 2016 </br>
-                Feedback to authors: July 21 2016 </br>
-                 Camera ready version: August 04 2016 </br>
+                <p>Workshop submission deadline: Jne 06 2016 </br>
+                Feedback to authors: June 14 2016 </br>
+                 Camera ready version: June 25 2016 </br>
 </p>
                 <h2>Submissions</h2>
                 <p>Workshop candidates are requested to send a position paper (4 pages in the ACM SIGCHI non-archival Extended Abstracts template (landscape format)) to the organizers about their research. All submissions should be sent as PDF to eyewear2016@geist.pro with "EyeWear 2016 Submission" as email subject.
