--- a/index.html
+++ b/index.html
@@ -106,12 +106,36 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="download" class="content-section text-left">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Schedule</h2>
-                    <p>To be announced ...</p>
+                    14:00 - 14:10 Welcome and Intro </br>
+
+  14:10 - 14:40 Position Paper Session 1</br>
+Reading Interventions - Tracking Reading State and Designing Interventions
+Shoya Ishimaru, Tilman Dingler, Kai Kunze, Koichi Kise, Andreas Dengel
+</br>
+Smart Glasses with Peripheral Vision Display  Takuro Nakuo, Kai Kunze, Takuro Nakuo
+</br>
+"What’s My Line? Glass Versus Paper for Cold Reading in Duologues"
+Jamie A. Ward, Paul Lukowicz
+</br>
+14:50 - 15:20 Position Paper Session 2</br>
+Smart Experimental Platform for Collecting Various Sensing Data from Various Things
+Yugo Nakamura, Yutaka Arakawa, Keiichi Yasumoto	Yutaka Arakawa
+</br>
+Exploring a Multi-Sensor Picking Process in the Future Warehouse
+Alexander Diete, Timo Sztyler, Lydia Weiland, Heiner Stuckenschmidt
+</br>
+Estimation of English skill with a mobile eye tracker Olivier Augereau, Hiroki Fujiyoshi, Koichi Kise
+</br>
+15:30 - 16:00 Collaboration Discussion and Brainstroming
+</br>
+16:00 - 16:15 Warp Up
+</br>
+
                 </div>
             </div>
         </div>
