--- a/eyewear2018/contact.html
+++ b/eyewear2018/contact.html
@@ -71,7 +71,7 @@
 
     <!-- Main Content -->
 
-    ]<div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
