--- a/eyewear2018/index.html
+++ b/eyewear2018/index.html
@@ -77,7 +77,7 @@
 
                 <h2>Introduction</h2>
             <p> Intelligent glasses, head-mounted displays, egocentric vision devices, and similar “smart
-eyewear” have recently emerged as interesting research platform for a range of research fields
+eyewear” have recently emerged as interesting research platforms for a range of research fields
 including, ubiquitous computing, computer vision, and social sciences. As most of the human
 senses are situated on the head, we believe that these types of devices have significant potential as
 a research and product platform for a wide range of wearable assistive systems in human
