--- a/eyewear2018/about.html
+++ b/eyewear2018/about.html
@@ -61,9 +61,9 @@
             <div class="page-heading">
               <h1>Call for Participation</h1>
               <span class="subheading"><br>
-                        Workshop submission deadline: July 14 2018 <br>
-                        Feedback to authors: July 21 2018 <br>
-                        Camera ready version: August 02 2018 <br>
+                        Submission deadline (extended): August 04 2018 <br>
+                        Feedback to authors: August 11 2018 <br>
+                        Camera ready version: August 18 2018 <br>
                         Workshop: October 08 2018 <br>
 
             </div>
