--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -74,7 +74,32 @@
           <div class="col-lg-8 col-md-10 mx-auto">
 
             <h4>Schedule</h4>
-            <p>...tbd...
+            <p>.08:00 Registration opens
+9:30 - 10:30 Welcome and Keynote (Thad Starner)
+10:30-11:00 Coffee break 1
+11:00 - 12:00 First Session
+
+EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander;Antonio Krüger
+
+From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag:Keio University;Olivier Augereau:Osaka Prefecture University
+
+IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge
+
+Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.
+
+
+12:00-14:00 Lunch
+14:00 - 14:45 Second Session
+
+AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna:MIT Media Lab;Utkarsh Sarawgi:MIT Media Lab;Pattie Maes:MIT Media Lab
+
+Mental State Analysis on Eyewear - Olivier Augereau; Benjamin Tag;Koichi Kise
+
+HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri; Olaf Pfeiffer;Paul Lukowicz.
+
+15:00-15:30 Coffee break 2
+
+15:30 - 16:30 Discussion Session
 
                <!--   
                     14:00 - 14:10 Welcome and Intro </br>
@@ -106,9 +131,10 @@ Estimation of English skill with a mobile eye tracker Olivier Augereau, Hiroki F
             </p>
           <h4>Speakers</h4>
            <p><b>Keynote Speaker:</b> Thad Starner, Georgia Tech, Google <br>
+             <!-- 
               <b>Presenters:</b> ...tbd...
             </p>
-          
+          -->
 
 
             <a class="btn btn-primary float-right" href="contact.html">Organizers &rarr;</a>
