--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -131,10 +131,10 @@ Estimation of English skill with a mobile eye tracker Olivier Augereau, Hiroki F
             </p>
           <h4>Speakers</h4>
            <p><b>Keynote Speaker:</b> Thad Starner, Georgia Tech, Google <br>
-             <!-- 
-              <b>Presenters:</b> ...tbd...
+             <
+              <b>For Presenters:</b> 10 min talk + 5min Q&A
             </p>
-          -->
+          
 
 
             <a class="btn btn-primary float-right" href="contact.html">Organizers &rarr;</a>
