--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -75,35 +75,35 @@
 
             <h4>Schedule</h4>
             <p>.08:00 Registration opens
-9:30 - 10:30 Welcome and Keynote (Thad Starner)
+9:30 - 10:30 Welcome and Keynote (Thad Starner)<br>
 
 
-10:30-11:00 Coffee break 1
+10:30-11:00 Coffee break 1<br>
 
 
-11:00 - 12:00 First Session
+11:00 - 12:00 First Session<br>
 
-EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander;Antonio Krüger
+EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander, Antonio Krüger<br>
 
-From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag:Keio University;Olivier Augereau:Osaka Prefecture University
+From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag, Olivier Augereau<br>
 
-IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge
+IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge<br>
 
-Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.
+Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br>
 
 
-12:00-14:00 Lunch
-14:00 - 14:45 Second Session
+12:00-14:00 Lunch<br>
+14:00 - 14:45 Second Session<br>
 
-AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna:MIT Media Lab;Utkarsh Sarawgi:MIT Media Lab;Pattie Maes:MIT Media Lab
+AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br>
 
-Mental State Analysis on Eyewear - Olivier Augereau; Benjamin Tag;Koichi Kise
+Mental State Analysis on Eyewear - Olivier Augereau, Benjamin Tag, Koichi Kise<br>
 
-HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri; Olaf Pfeiffer;Paul Lukowicz.
+HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br>
 
-15:00-15:30 Coffee break 2
+15:00-15:30 Coffee break 2<br>
 
-15:30 - 16:30 Discussion Session
+15:30 - 16:30 Discussion Session<br>
 
                <!--   
                     14:00 - 14:10 Welcome and Intro </br>
