--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -74,14 +74,14 @@
           <div class="col-lg-8 col-md-10 mx-auto">
 
             <h4>Schedule</h4>
-            <p>.08:00 Registration opens
-9:30 - 10:30 Welcome and Keynote (Thad Starner)<br>
+            <p>08:00 Registration opens<br>
+9:30 - 10:30 Welcome and Keynote (Thad Starner)<br><br>
 
 
-10:30-11:00 Coffee break 1<br>
+10:30-11:00 Coffee break 1<br><br>
 
 
-11:00 - 12:00 First Session<br>
+11:00 - 12:00 First Session<br><br>
 
 EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander, Antonio Krüger<br>
 
@@ -92,8 +92,8 @@ IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hell
 Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br>
 
 
-12:00-14:00 Lunch<br>
-14:00 - 14:45 Second Session<br>
+12:00-14:00 Lunch<br><br>
+14:00 - 14:45 Second Session<br><br>
 
 AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br>
 
@@ -101,9 +101,9 @@ Mental State Analysis on Eyewear - Olivier Augereau, Benjamin Tag, Koichi Kise<b
 
 HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br>
 
-15:00-15:30 Coffee break 2<br>
+15:00-15:30 Coffee break 2<br><br>
 
-15:30 - 16:30 Discussion Session<br>
+15:30 - 16:30 Discussion Session<br><br>
 
                <!--   
                     14:00 - 14:10 Welcome and Intro </br>
