--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -74,32 +74,32 @@
           <div class="col-lg-8 col-md-10 mx-auto">
 
             <h4>Schedule</h4>
-            <p>08:00 Registration opens<br>
+            <p>08:00 Registration opens<br><br>
 9:30 - 10:30 Welcome and Keynote (Thad Starner)<br><br>
 
 
 10:30-11:00 Coffee break 1<br><br>
 
 
-11:00 - 12:00 First Session<br><br>
+11:00 - 12:00 First Session:<br><br>
 
-EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander, Antonio Krüger<br>
+EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander, Antonio Krüger<br><br>
 
-From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag, Olivier Augereau<br>
+From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag, Olivier Augereau<br><br>
 
-IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge<br>
+IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge<br><br>
 
-Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br>
+Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br><br>
 
 
 12:00-14:00 Lunch<br><br>
-14:00 - 14:45 Second Session<br><br>
+14:00 - 14:45 Second Session:<br><br>
 
-AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br>
+AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
 
-Mental State Analysis on Eyewear - Olivier Augereau, Benjamin Tag, Koichi Kise<br>
+Mental State Analysis on Eyewear - Olivier Augereau, Benjamin Tag, Koichi Kise<br><br>
 
-HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br>
+HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br><br>
 
 15:00-15:30 Coffee break 2<br><br>
 
