--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -83,23 +83,23 @@
 
 11:00 - 12:00 First Session:<br><br>
 
-EyeSense: Towards Infomration Extraction on Corneal Images - Christian Lander, Antonio Krüger<br><br>
+<h3>EyeSense: Towards Infomration Extraction on Corneal Images</h3> - Christian Lander, Antonio Krüger<br><br>
 
-From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies - Benjamin Tag, Olivier Augereau<br><br>
+<h3>From the Laboratory into the Wild: Eyewear in Cognitive-Aware System Studies</h3> - Benjamin Tag, Olivier Augereau<br><br>
 
-IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing - Till Hellmund, Andreas Seitz, Bernd Bruegge<br><br>
+<h3>IPRA: Real-Time Face Recognition on Smart Glasses with Fog Computing</h3> - Till Hellmund, Andreas Seitz, Bernd Bruegge<br><br>
 
-Don’t Look at Me, I’m wearing an Eyetracker! - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br><br>
+<h3>Don’t Look at Me, I’m wearing an Eyetracker!</h3> - Roser Canigueral, Antonia Hamiltonn, Jamie A. Ward.<br><br>
 
 
 12:00-14:00 Lunch<br><br>
 14:00 - 14:45 Second Session:<br><br>
 
-AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
+<h3>AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention</h3> - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
 
-Mental State Analysis on Eyewear - Olivier Augereau, Benjamin Tag, Koichi Kise<br><br>
+<h3>Mental State Analysis on Eyewearv - Olivier Augereau, Benjamin Tag, Koichi Kise<br><br>
 
-HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br><br>
+<h3>HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits</h3> - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br><br>
 
 15:00-15:30 Coffee break 2<br><br>
 
@@ -135,7 +135,6 @@ Estimation of English skill with a mobile eye tracker Olivier Augereau, Hiroki F
             </p>
           <h4>Speakers</h4>
            <p><b>Keynote Speaker:</b> Thad Starner, Georgia Tech, Google <br>
-             <
               <b>For Presenters:</b> 10 min talk + 5min Q&A
             </p>
           
