--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -95,11 +95,11 @@
 12:00-14:00 Lunch<br><br>
 14:00 - 14:45 Second Session:<br><br>
 
-<h3>AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention</h3> - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
+<h5>AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention</h5> - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
 
-<h3>Mental State Analysis on Eyewearv - Olivier Augereau, Benjamin Tag, Koichi Kise<br><br>
+<h5>Mental State Analysis on Eyewearv</h5> - Olivier Augereau, Benjamin Tag, Koichi Kise<br><br>
 
-<h3>HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits</h3> - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br><br>
+<h5>HolOsci: Hololens Augmented Reality Oscilloscope Based Support for Debugging Electronics Circuits</h5> - Hamraz Javaheri, Olaf Pfeiffer, Paul Lukowicz<br><br>
 
 15:00-15:30 Coffee break 2<br><br>
 
