--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -81,7 +81,7 @@
 10:30-11:00 Coffee break 1<br><br>
 
 
-11:00 - 12:00 First Session:<br><br>
+11:00 - 12:00 First Session:<br>
 
 <h5>EyeSense: Towards Infomration Extraction on Corneal Images</h5> - Christian Lander, Antonio Krüger<br><br>
 
@@ -93,7 +93,7 @@
 
 
 12:00-14:00 Lunch<br><br>
-14:00 - 14:45 Second Session:<br><br>
+14:00 - 14:45 Second Session:<br>
 
 <h5>AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention</h5> - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
 
