--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -135,6 +135,33 @@ Estimation of English skill with a mobile eye tracker Olivier Augereau, Hiroki F
             </p>
           <h4>Speakers</h4>
            <p><b>Keynote Speaker:</b> Thad Starner, Georgia Tech, Google <br>
+
+           	<h5>Do users want an immersive display?</h5>
+
+Reality-replacing AR systems are promoted in film and science fiction
+but when are they actually desirable?  In this talk I will present use
+cases for wearables that range from currently successful
+implementations to speculative research. I will argue that fashion,
+weight, eyebox, speed of access, social perception, and perceptions of
+safety are more important than spatial resolution and field-of-view
+for the many types of on-the-go AR. However, I will also examine the
+case for large field-of-view systems, which have provable advantages
+when users are solving complex spatial tasks. In dispelling some of
+the myths about head worn displays, I hope to make it easier for
+entrepreneurs and application designers to choose the right system for
+the task.<br><br>
+
+---
+Thad Starner is a Professor of Computing at Georgia Tech and a
+Technical Lead on Google Glass.  In 1990, Starner coined the term
+"augmented reality" to describe the types of interfaces he envisioned
+for the future, and he has been using a head worn display as part of
+his daily life since 1993.  Recently, Thad has been creating wearable
+computers to help working dogs communicate with their handlers and
+marine mammalogists conduct two-way communication research with wild
+dolphins. Dr. Starner has produced over 600 papers, presentations, and
+patents on his research and was elected to the CHI Academy in 2017.<br><br>
+
               <b>For Presenters:</b> 10 min talk + 5min Q&A
             </p>
           
