--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -151,8 +151,8 @@ the myths about head worn displays, I hope to make it easier for
 entrepreneurs and application designers to choose the right system for
 the task.<br><br>
 
----
-Thad Starner is a Professor of Computing at Georgia Tech and a
+
+<b>Thad Starner</b> is a Professor of Computing at Georgia Tech and a
 Technical Lead on Google Glass.  In 1990, Starner coined the term
 "augmented reality" to describe the types of interfaces he envisioned
 for the future, and he has been using a head worn display as part of
