--- a/eyewear2018/post.html
+++ b/eyewear2018/post.html
@@ -93,7 +93,7 @@
 
 
 12:00-14:00 Lunch<br><br>
-14:00 - 14:45 Second Session:<br>
+14:00 - 14:45 Second Session:<br><br>
 
 <h5>AttentivU: Evaluating the Feasibility of Biofeedback Glasses to Monitor and Improve Attention</h5> - Nataliya Kosmyna, Utkarsh Sarawgi, Pattie Maes<br><br>
 
