--- a/eyewear2019/about.html
+++ b/eyewear2019/about.html
@@ -122,6 +122,8 @@ about their research.
 All submissions should be sent as a PDF to <a href="mailto:eyewear2019@eyewear.pro">eyewear2019@eyewear.pro</a> with <b>"EyeWear 2019
 Submission"</b> as email subject.</i> </p>
 
+<p> The submission template can be found here: <a href= "https://www.acm.org/publications/proceedings-template"></a>
+
            
      
 
