--- a/eyewear2019/about.html
+++ b/eyewear2019/about.html
@@ -74,6 +74,12 @@
 
     <!-- Main Content -->
     <div class="container">
+
+<div style="font-size: 14px; border: 2px #d41414 solid; background: pink; color: #d41414; width: 95%; margin: 0px auto 30px; padding: 10px 2.5% ">
+    <b>Important Note:</b>
+    <p> ACM requires a template change of all accepted submissions to <b><a style="color: darkred" href="https://www.acm.org/publications/proceedings-template">the new ACM SIGCHI template</a></b>. This applies to <b>all submissions including adjunct proceedings (i.e. for workshops, posters, &amp; demos). </b> Read more about selecting the right template <b><a style="color: darkred" href="template_info.html"> here</a></b>.
+    </p>
+
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
