--- a/eyewear2019/index.html
+++ b/eyewear2019/index.html
@@ -73,7 +73,7 @@
 
     	<div style="font-size: 14px; border: 2px #d41414 solid; background: pink; color: #d41414; width: 95%; margin: 0px auto 30px; padding: 10px 2.5% ">
     <b>Important Note:</b>
-    <p> ACM requires a template change of all accepted submissions to <b><a style="color: darkred" href="https://www.acm.org/publications/proceedings-template">the new ACM SIGCHI template</a></b>. This applies to <b>, i.e. all tracks use the same portrait style template including adjunct proceedings (i.e. for workshops, posters, &amp; demos). </b> Read more about selecting the right template <b><a style="color: darkred" href="template_info.html"> here</a></b>.
+    <p> ACM requires a template change of all accepted submissions to <b><a style="color: darkred" href="https://www.acm.org/publications/proceedings-template">the new ACM SIGCHI template</a></b>. This applies to all tracks,<b> i.e. all submissions use the same portrait style template including adjunct proceedings (i.e. for workshops, posters, &amp; demos). </b> Read more about selecting the right template <b><a style="color: darkred" href="template_info.html"> here</a></b>.
     </p>
 </div>
 
