--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -78,31 +78,33 @@
 
 
             <h4>Schedule</h4>
-            <p>08:30 Registration opens<br><br>
+            <p>
 
-09:30 - 09:45 Welcome and Introductio<br><br>
+              08:30     Registration opens<br><br>
 
-09:45 - 10:30 Keynote 1: Dr. Charles Nduka, EMTEQ (30min talk + 15min Q&A)
+09:30 - 09:45   Welcome and Introductio<br><br>
 
-10:30 - 11:00 Coffee Break and Poster Session 1<br><br>
+09:45 - 10:30   Keynote 1: Dr. Charles Nduka, EMTEQ (30min talk + 15min Q&A)<br><br>
 
-11:00 - 11:45 First Session: Eyewear and Cognition<br><br>
+10:30 - 11:00   Coffee Break and Poster Session 1<br><br>
 
-<h3>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</h3> <br><br>
+11:00 - 11:45   First Session: Eyewear and Cognition<br><br>
 
-<h3>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h3> <br><br>
+<h6>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</h3> <br><br>
 
-<h3>Capturing Attentional Problems with Smart Eyewear</h3> <br><br>
+<h6>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h3> <br><br>
+
+<h6>Capturing Attentional Problems with Smart Eyewear</h3> <br><br>
 
 11:45 - 12:15 Poster Session 2 <br><br>
 
 12:15 - 13:00 Second Session: Eyewear in Action<br><br>
 
-<h3>Towards 3D Smooth Pursuit Interaction</h3> <br><br>
+<h6>Towards 3D Smooth Pursuit Interaction</h3> <br><br>
 
-<h3>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</h3> <br><br>
+<h6>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</h3> <br><br>
 
-<h3>EyeControl:Wearable Assistance for Industrial Maintenance Tasks</h3> <br><br>
+<h6>EyeControl:Wearable Assistance for Industrial Maintenance Tasks</h3> <br><br>
 
 13:00 - 14:00 Lunch<br><br>
 
