--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -80,43 +80,43 @@
             <h4>Schedule</h4>
             <p>
 
-              08:30     Registration opens<br><br>
+              <b>08:30</b>     Registration opens<br><br>
 
-09:30 - 09:45   Welcome and Introductio<br><br>
+<b>09:30 - 09:45</b>   Welcome and Introductio<br><br>
 
-09:45 - 10:30   Keynote 1: Dr. Charles Nduka, EMTEQ (30min talk + 15min Q&A)<br><br>
+<b>09:45 - 10:30</b>   Keynote 1: Dr. Charles Nduka, EMTEQ (30min talk + 15min Q&A)<br><br>
 
-10:30 - 11:00   Coffee Break and Poster Session 1<br><br>
+<b>10:30 - 11:00</b>   Coffee Break and Poster Session 1<br><br>
 
-11:00 - 11:45   First Session: Eyewear and Cognition<br><br>
+<b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<h6>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</h3> <br><br>
+<h6>1. Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</h3> <br>
 
-<h6>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h3> <br><br>
+<h6>2. EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h3> <br>
 
-<h6>Capturing Attentional Problems with Smart Eyewear</h3> <br><br>
+<h6>3. Capturing Attentional Problems with Smart Eyewear</h3> <br>
 
-11:45 - 12:15 Poster Session 2 <br><br>
+<b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
-12:15 - 13:00 Second Session: Eyewear in Action<br><br>
+<b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<h6>Towards 3D Smooth Pursuit Interaction</h3> <br><br>
+<h6>4. Towards 3D Smooth Pursuit Interaction</h3> <br>
 
-<h6>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</h3> <br><br>
+<h6>5. AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</h3> <br>
 
-<h6>EyeControl:Wearable Assistance for Industrial Maintenance Tasks</h3> <br><br>
+<h6>6. EyeControl:Wearable Assistance for Industrial Maintenance Tasks</h3> <br>
 
-13:00 - 14:00 Lunch<br><br>
+<b>13:00 - 14:00</b> Lunch<br><br>
 
-14:00 - 14:45 Keynote 2: Prof. Daniel Richardson, UCL Eyethink Lab (30min talk + 15min Q&A)<br><br>
+<b>14:00 - 14:45</b> Keynote 2: Prof. Daniel Richardson, UCL Eyethink Lab (30min talk + 15min Q&A)<br><br>
 
-14:45 - 15:30 Groupig and Group Task<br><br>
+<b>14:45 - 15:30</b> Groupig and Group Task 1/2<br><br>
 
-15:30 - 16:00 Coffee Break<br><br>
+<b>15:30 - 16:00</b> Coffee Break<br><br>
 
-16:00 - 17:30 Coffee break 2<br><br>
+<b>16:00 - 17:30</b> Group Talk 2/2<br><br>
 
-17:30         Pub Activities ;)<br><br>
+<b>17:30</b>         Pub Activities ;)<br><br>
 
              
                     
