--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,21 +90,21 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<i>1. Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</i> <br>
+- Cognitive Load Assessment from Facial Temperature Using Smart Eyewear - <br>
 
-<i>2. EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</i> <br>
+- EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction - <br>
 
-<i>3. Capturing Attentional Problems with Smart Eyewear</i> <br>
+- Capturing Attentional Problems with Smart Eyewear - <br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<i>4. Towards 3D Smooth Pursuit Interaction</i> <br>
+- Towards 3D Smooth Pursuit Interaction - <br>
 
-<i>5. AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</i> <br>
+- AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges - <br>
 
-<i>6. EyeControl:Wearable Assistance for Industrial Maintenance Tasks</i> <br>
+- EyeControl:Wearable Assistance for Industrial Maintenance Tasks - <br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
