--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -94,7 +94,7 @@
 
 - EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction - <br>
 
-- Capturing Attentional Problems with Smart Eyewear - <br>
+- Capturing Attentional Problems with Smart Eyewear - <br><br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
@@ -104,7 +104,7 @@
 
 - AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges - <br>
 
-- EyeControl:Wearable Assistance for Industrial Maintenance Tasks - <br>
+- EyeControl:Wearable Assistance for Industrial Maintenance Tasks - <br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
@@ -130,14 +130,14 @@
 
            <p><b>Keynote Speaker:</b> Dr. Charles Nduka, MA, MD, FRCS Co-founder and Chief Scientist <br>
 
-           	<h5>The applications of biometric glasses for health and well-being</h5>
+           	<h5>"The applications of biometric glasses for health and well-being"</h5>
 
 Dr Charles Nduka, is a surgeon specialising in facial expressions. He co-founded Emteq, a company pioneering the use of head worn sensor devices (glasses and VR/ AR) for measuring emotional responses based on facial expression and heart rate. The company has raised over £2M in funding and have active projects in Parkinson’s disease, depression and facial paralysis. <br><br>
 
 
 <p><b>Keynote Speaker:</b> Prof. Daniel C. Richardson,Affiliate Tutor, Department of Experimental Psychology, University College London <br>
 
-            <h5>Cognitive and Social Processes revealed by Gaze and Physiology</h5>
+            <h5>"Cognitive and Social Processes revealed by Gaze and Physiology"</h5>
 
 Daniel is a Professor of Experimental Psychology at University College London. Prior to that, he was an undergraduate at Magdalen College, Oxford, a graduate student at Cornell, a postdoctoral researcher at Stanford, and an assistant professor at UC Santa Cruz. His research examines how individuals' thought processes are related to the people around them. He has authored many scientific articles in cognitive, developmental and social psychology and two popular science books, Man vs Mind and A Dummies Guide to Social Psychology. He received two Provost's Teaching Awards from UCL, and has performed shows at the London Science Museum and Bloomsbury theatre combining science, music and live experiments on the group mind of the audience.  <br><br>
 
