--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,21 +90,21 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<h5>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear </h5><br>- Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze<br>
+<h5>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear </h5>- Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze<br><br>
 
-<h5>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h5> <br>- Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas<br>
+<h5>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h5> - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas<br><br>
 
-<h5>Capturing Attentional Problems with Smart Eyewear </h5><br>- Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen <br><br>
+<h5>Capturing Attentional Problems with Smart Eyewear </h5>- Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen <br><br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<h5>Towards 3D Smooth Pursuit Interaction <br>- </h5><br>
+<h5>Towards 3D Smooth Pursuit Interaction</h5> - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha<br>
 
-<h5>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges <br>- </h5><br>
+<h5>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges </h5> - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere <br><br>
 
-<h5>EyeControl:Wearable Assistance for Industrial Maintenance Tasks <br>- </h5><br><br>
+<h5>EyeControl: Wearable Assistance for Industrial Maintenance Tasks </h5> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
