--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,27 +90,27 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<h5>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear </h5>- Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze<br><br>
+<small>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear </small>- Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze<br><br>
 
-<h5>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</h5> - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas<br><br>
+<small>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</small> - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas<br><br>
 
-<h5>Capturing Attentional Problems with Smart Eyewear </h5>- Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen <br><br>
+<small>Capturing Attentional Problems with Smart Eyewear </small>- Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen <br><br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<h5>Towards 3D Smooth Pursuit Interaction</h5> - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha<br>
+<small>Towards 3D Smooth Pursuit Interaction</small> - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha<br><br>
 
-<h5>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges </h5> - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere <br><br>
+<small>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges </small> - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere <br><br>
 
-<h5>EyeControl: Wearable Assistance for Industrial Maintenance Tasks </h5> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
+<small>EyeControl: Wearable Assistance for Industrial Maintenance Tasks </small> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
 <b>14:00 - 14:45</b> Keynote 2: Prof. Daniel Richardson, UCL Eyethink Lab (30min talk + 15min Q&A)<br><br>
 
-<b>14:45 - 15:30</b> Groupig and Group Task 1/2<br><br>
+<b>14:45 - 15:30</b> Grouping and Group Task 1/2<br><br>
 
 <b>15:30 - 16:00</b> Coffee Break<br><br>
 
