--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,21 +90,21 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<small>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear </small>- Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze<br><br>
+<small>"Cognitive Load Assessment from Facial Temperature Using Smart Eyewear" - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br>
 
-<small>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</small> - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas<br><br>
+<small>"EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction" - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br>
 
-<small>Capturing Attentional Problems with Smart Eyewear </small>- Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen <br><br>
+<small>"Capturing Attentional Problems with Smart Eyewear" - Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen </small><br><br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<small>Towards 3D Smooth Pursuit Interaction</small> - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha<br><br>
+<small>"Towards 3D Smooth Pursuit Interaction" - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha</small><br>
 
-<small>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges </small> - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere <br><br>
+<small>"AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges"  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br>
 
-<small>EyeControl: Wearable Assistance for Industrial Maintenance Tasks </small> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
+<small>"EyeControl: Wearable Assistance for Industrial Maintenance Tasks" - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
