--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,9 +90,9 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<small>"Cognitive Load Assessment from Facial Temperature Using Smart Eyewear" - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br>
+<small>"Cognitive Load Assessment from Facial Temperature Using Smart Eyewear" - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br><br>
 
-<small>"EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction" - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br>
+<small>"EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction" - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br><br>
 
 <small>"Capturing Attentional Problems with Smart Eyewear" - Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen </small><br><br>
 
@@ -100,9 +100,9 @@
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<small>"Towards 3D Smooth Pursuit Interaction" - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha</small><br>
+<small>"Towards 3D Smooth Pursuit Interaction" - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha</small><br><br>
 
-<small>"AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges"  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br>
+<small>"AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges"  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br><br>
 
 <small>"EyeControl: Wearable Assistance for Industrial Maintenance Tasks" - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
 
