--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -90,7 +90,7 @@
 
 <b>11:00 - 11:45</b>   First Session: Eyewear and Cognition<br><br>
 
-<small>"Cognitive Load Assessment from Facial Temperature Using Smart Eyewear" - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br><br>
+<small><i>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</i> - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br><br>
 
 <small>"EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction" - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br><br>
 
