--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -92,19 +92,19 @@
 
 <small><i>Cognitive Load Assessment from Facial Temperature Using Smart Eyewear</i> - Fangqing Zhengren, George Chernyshov, Dingding Zheng, Kai Kunze</small><br><br>
 
-<small>"EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction" - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br><br>
+<small><i>EEGlass: An EEG-Eyeware Prototype for Ubiquitous Brain-Computer Interaction</i> - Athanasios Vourvopoulos, Evangelos Niforatos, Michail Giannas</small><br><br>
 
-<small>"Capturing Attentional Problems with Smart Eyewear" - Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen </small><br><br>
+<small><i>Capturing Attentional Problems with Smart Eyewear</i> - Kati Pettersson, Kiti Müller, Laura Sokka, Satu Pakarinen </small><br><br>
 
 <b>11:45 - 12:15</b> Poster Session 2 <br><br>
 
 <b>12:15 - 13:00</b> Second Session: Eyewear in Action<br><br>
 
-<small>"Towards 3D Smooth Pursuit Interaction" - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha</small><br><br>
+<small><i>Towards 3D Smooth Pursuit Interaction</i> - Marcel Breitenfellner, Florian Jungwirth, Alois Ferscha</small><br><br>
 
-<small>"AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges"  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br><br>
+<small><i>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</i>  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br><br>
 
-<small>"EyeControl: Wearable Assistance for Industrial Maintenance Tasks" - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
+<small><i>EyeControl: Wearable Assistance for Industrial Maintenance Tasks</i> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
