--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -104,7 +104,7 @@
 
 <small><i>AI-Mediated Gaze-Based Intention Recognition for Smart Eyewear: Opportunities & Challenges</i>  - Joshua Newn, Benjamin Tag, Ronal Singh, Eduardo Velloso, Frank Vetere </small><br><br>
 
-<small><i>EyeControl: Wearable Assistance for Industrial Maintenance Tasks</i> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha <br><br>
+<small><i>EyeControl: Wearable Assistance for Industrial Maintenance Tasks</i> - Florian Jungwirth, Benedikt Gollan, Marcel Breitenfellner, Pratheeban Elancheliyan, Alois Ferscha </small><br><br>
 
 <b>13:00 - 14:00</b> Lunch<br><br>
 
