--- a/eyewear2019/post.html
+++ b/eyewear2019/post.html
@@ -82,7 +82,7 @@
 
               <b>08:30</b>     Registration opens<br><br>
 
-<b>09:30 - 09:45</b>   Welcome and Introductio<br><br>
+<b>09:30 - 09:45</b>   Welcome and Introduction<br><br>
 
 <b>09:45 - 10:30</b>   Keynote 1: Dr. Charles Nduka, EMTEQ (30min talk + 15min Q&A)<br><br>
 
