--- a/eyewear2019/contact.html
+++ b/eyewear2019/contact.html
@@ -78,7 +78,9 @@
    <p> Benjamin Tag, Keio University, Yokohama, Japan <br>
 Jamie A Ward, Goldsmiths University of London, London, United Kingdom <br>
 Yuji Uema, J!NS Inc., Tokyo, Japan <br>
-Kai Kunze, Keio University, Yokohama, Japan
+Kai Kunze, Keio University, Yokohama, Japan <br>
+Dingding Zhang, Keio University, Yokohama, Japan <br>
+Aman Gupta, Keio University, Yokohama, Japan 
             </p> 
 
     
